fix: Resolve some issues

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Javis603 | Developer Portfolio</title>
     <meta name="description" content="Javis603 - Software developer specializing in AI solutions and Discord bots">
     <meta name="keywords" content="developer, portfolio, discord bot, AI, software engineer">
+
+    <!-- SEO -->
+    <link rel="canonical" href="https://javis-ai.com/" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Javis603 | Developer Portfolio" />
+    <meta property="og:description" content="Javis603 - Software developer specializing in AI solutions and Discord bots" />
+    <meta property="og:url" content="https://javis-ai.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- JSON data - Schema.org -->
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Person",
+          "name": "Javis603",
+          "url": "https://javis-ai.com/",
+          "jobTitle": "Software Developer",
+          "sameAs": ["https://github.com/Javis603"]
+        }
+    </script>
     
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
