feat: UI overhaul
Added visitor counter script to track site visits.

--- a/index.html
+++ b/index.html
@@ -181,11 +181,15 @@
             
             <div class="visitor-counter">
                 <span class="label">VISITORS</span>
-                <span id="visit-count" class="count">Loading...</span>
+                <span id="busuanzi_container_site_pv" style="display:none">
+                    <span id="busuanzi_value_site_pv" class="count">--</span>
+                </span>
             </div>
         </div>
     </footer>
 
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    
     <script src="js/main.js" defer></script>
 </body>
 </html>
